Added anchor tags to navbar  html file

--- a/navbar.html
+++ b/navbar.html
@@ -43,5 +43,7 @@
 
     </div>
    
+    <a href="signup.html">Click to Sign-up</a>
+    <a href="MensPage.html">Go to Mens-Page</a>
 </body>
 </html>
