--- a/navbar.html
+++ b/navbar.html
@@ -34,10 +34,10 @@
        <h1>Reebok</h1>
 
        <div class="child">
-        <h1><a href="MensPage.html"></a>Men</h1>
+        <h1><a href="MensPage.html">Men</a></h1>
         <h1>Women</h1>
         <h1>Login</h1>
-        <h1><a href="signup.html"></a>Singup</h1>
+        <h1><a href="signup.html">Singup</a></h1>
        </div>
        
 
